--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ body {
             <div class="lead-paragraph bg-white p-4 rounded shadow-sm">
                 <p>Nel mondo dello sviluppo software, l'adattabilità è la chiave per il successo. Il metodo Agile trasforma il modo in cui i team creano soluzioni digitali, favorendo collaborazione, iterazioni rapide e un miglior allineamento con le esigenze del cliente.</p>
             </div>
-            <img src=img/img1.jpg alt="Agile Methodology" class="featured-image img-fluid" data-aos="zoom-in">
+            <img src=img1.jpg alt="Agile Methodology" class="featured-image img-fluid" data-aos="zoom-in">
         </section>
 
         <!-- Key Points Section -->
@@ -301,7 +301,7 @@ body {
                     <p>I dati del Chaos Report 2020 evidenziano l’importanza di adottare metodologie flessibili come l’Agile</p>
                     <p>Il Chaos Report 2020 conferma che l’Agile non solo migliora le probabilità di successo, ma riduce anche i rischi di fallimento, rendendolo la scelta preferita per progetti complessi e dinamici.</p>
                 </div>
-                <img src=img/img3.jpg alt="Chaos Report" class="featured-image img-fluid mt-5" data-aos="zoom-in">
+                <img src=img3.jpg alt="Chaos Report" class="featured-image img-fluid mt-5" data-aos="zoom-in">
             </div>
         </section>
 
