--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     padding: 4rem 0;
     background-color: #0A192F; /* Deep navy blue */
     color: white;
-    background-image: url('img/img5.png'); /* Background image */
+    background-image: url(img/img5.png); /* Background image */
     background-size: cover; /* Ensure the image covers the entire section */
     background-position: center; /* Center the image */
     background-repeat: no-repeat; /* Prevent repetition */
@@ -408,7 +408,7 @@
       color: white;
       overflow: hidden;
       background-color: #052658;
-      background-image: url('img/img1.png');
+      background-image: url(img/img1.png);
       background-size: cover;
       background-position: top right;
       padding: 0 2rem;
@@ -436,7 +436,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background-image: url('./img/img1.png');
+      background-image: url(./img/img1.png);
       background-size: cover;
       background-position: top right;
       opacity: 0.7;
@@ -741,7 +741,7 @@
     </div>
   </section>
 <section>
-    <img class="img-fluid" src="img/img2.png" alt="Full Width Image" style="width: 100%;">
+    <img class="img-fluid" src=img/img2.png alt="Full Width Image" style="width: 100%;">
     <section id="waterfall-vs-agile" class="py-5 bg-light">
         <div class="text-center mb-5">
             <h2 class="section-title" style="color: #052658; font-size: 46px;">Differenze tra Waterfall e Agile</h2>
@@ -759,7 +759,7 @@
           </div>
           <div class="row align-items-center">
             <div class="col-lg-6 text-center order-lg-2">
-              <img src="img/img4.jpg" alt="Agile Framework" class="img-fluid rounded" style="width: 50%; height: auto; object-fit: cover;">
+              <img src=img/img4.jpg alt="Agile Framework" class="img-fluid rounded" style="width: 50%; height: auto; object-fit: cover;">
 
             </div>
             <div class="col-lg-6 order-lg-1">
