--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
     @media (max-width: 768px) {
       .hero-section {
         padding-left: 10%;
-        background-position: top right;
+        background-position: top left;
       }
       .hero-section .container {
         transform: translateX(0);
@@ -464,7 +464,7 @@
     @media (max-width: 576px) {
       .hero-section {
         padding: 1rem;
-        background-position: top right;
+        background-position: top left;
       }
       .hero-section h1 {
         font-size: 2rem;
