--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
     @media (max-width: 768px) {
       .hero-section {
         padding-left: 10%;
-        background-position: top left;
+        background-position: left;
       }
       .hero-section .container {
         transform: translateX(0);
