--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
     @media (max-width: 576px) {
       .hero-section {
         padding: 1rem;
-        background-position: top left;
+        background-position: left;
       }
       .hero-section h1 {
         font-size: 2rem;
