--- a/index.html
+++ b/index.html
@@ -447,11 +447,11 @@
     @media (max-width: 768px) {
       .hero-section {
         padding-left: 10%;
-        background-position: left;
+        background-position: right;
       }
       .hero-section .container {
         transform: translateX(0);
-        text-align: center;
+        text-align: left;
       }
       .hero-section h1 {
         font-size: 2.5rem;
@@ -464,7 +464,7 @@
     @media (max-width: 576px) {
       .hero-section {
         padding: 1rem;
-        background-position: left;
+        background-position: right;
       }
       .hero-section h1 {
         font-size: 2rem;
