--- a/index.html
+++ b/index.html
@@ -447,7 +447,8 @@
     @media (max-width: 768px) {
       .hero-section {
         padding-left: 10%;
-        background-position: right;
+        background-image: url(./img/img5.png);
+        background-position: bottom;
       }
       .hero-section .container {
         transform: translateX(0);
@@ -464,7 +465,8 @@
     @media (max-width: 576px) {
       .hero-section {
         padding: 1rem;
-        background-position: right;
+        background-image: url(./img/img5.png);
+        background-position: bottom;
       }
       .hero-section h1 {
         font-size: 2rem;
