--- a/index.html
+++ b/index.html
@@ -267,57 +267,54 @@
     /* Responsive Design */
     @media (max-width: 768px) {
       .key-points-section {
-        padding: 20px 20px;
+      padding: 20px 20px;
       }
       .key-point {
-        flex-direction: column;
-        margin-bottom: 20px;
+      display: flex;
+      align-items: flex-start;
+      margin-bottom: 20px;
       }
       .key-point-number {
-        font-size: 20px;
-        margin-right: 0;
-        margin-bottom: 15px;
-        width: auto;
+      font-size: 25px;
+      margin-right: 15px;
+      width: auto;
+      text-align: center;
+      flex-shrink: 0;
       }
       .key-point-content {
-        margin-left: 0;
+      margin-left: 0;
       }
       .key-point-content h3 {
-        font-size: 18px;
+      font-size: 16px;
+      margin-bottom: 5px;
       }
       .key-point-content li {
-        font-size: 14px;
+      font-size: 14px;
       }
     }
 
     @media (max-width: 576px) {
       .key-points-section {
-        padding: 30px 15px;
-      }
-      .key-point-number {
-        font-size: 20px;
-      }
-      .key-point-content h3 {
-        font-size: 16px;
-      }
-      .key-point-content li {
-        font-size: 12px;
-      }
-    }
-    /* Responsive Styles */
-    @media (max-width: 768px) {
-      .key-points-section {
-        padding: 20px 20px;
+      padding: 30px 30px;
       }
       .key-point {
-        flex-direction: column;
-        margin-bottom: 25px;
+      display: flex;
+      align-items: flex-start;
+      margin-bottom: 20px;
       }
       .key-point-number {
-        font-size: 20px;
-        margin-right: 0;
-        margin-bottom: 15px;
-        width: auto;
+      font-size: 20px;
+      margin-right: 30px;
+      width: auto;
+      text-align: center;
+      flex-shrink: 0;
+      }
+      .key-point-content h3 {
+      font-size: 14px;
+      margin-bottom: 5px;
+      }
+      .key-point-content li {
+      font-size: 12px;
       }
     }
     .sticky-header {
