--- a/index.html
+++ b/index.html
@@ -739,72 +739,101 @@
       </div>
     </div>
   </section>
-<section>
-    <img class="img-fluid" src=img/img2.png alt="Full Width Image" style="width: 100%;">
+ <section>
+  <img class="img-fluid" src=img/img2.png alt="Full Width Image" style="width: 100%;">
     <section id="waterfall-vs-agile" class="py-5 bg-light">
-        <div class="text-center mb-5">
-            <h2 class="section-title" style="color: #052658; font-size: 46px;">Differenze tra Waterfall e Agile</h2>
+      <div class="text-center mb-5"></div>
+        <h2 class="section-title" style="color: #052658; font-size: 46px;">Differenze tra Waterfall e Agile</h2>
+      </div>
+      <div class="container">
+        <div class="row align-items-center mb-5">
+          <div class="col-lg-6">
+            <h3>Waterfall<br><small class="text-muted">Approccio Sequenziale</small></h3>
+            <p>La metodologia Waterfall segue un approccio lineare e sequenziale. Ogni fase del progetto deve essere completata prima di passare alla successiva. Questo modello è ideale per progetti con obiettivi ben definiti e poco soggetti a cambiamenti. Tuttavia, la sua rigidità rende difficile l'incorporazione di modifiche una volta che il progetto è in corso. Il coinvolgimento degli stakeholder è limitato principalmente alla fase iniziale e finale del progetto.</p>
+            <div class="d-block d-lg-none text-center mt-3">
+              <img src="img/img3.jpg" alt="Waterfall Model" class="img-fluid rounded" style="width: 60%;">
+            </div>
+          </div>
+          <div class="col-lg-6 text-center d-none d-lg-block">
+            <img src="img/img3.jpg" alt="Waterfall Model" class="img-fluid rounded" style="width: 60%;">
+          </div>
         </div>
-        <div class="container">
-          <div class="row align-items-center mb-5">
-            <div class="col-lg-6">
-              <h3>Waterfall<br><small class="text-muted">Approccio Sequenziale</small></h3>
-              <p>La metodologia Waterfall segue un approccio lineare e sequenziale. Ogni fase del progetto deve essere completata prima di passare alla successiva. Questo modello è ideale per progetti con obiettivi ben definiti e poco soggetti a cambiamenti. Tuttavia, la sua rigidità rende difficile l'incorporazione di modifiche una volta che il progetto è in corso. Il coinvolgimento degli stakeholder è limitato principalmente alla fase iniziale e finale del progetto.</p>
-            </div>
-            <div class="col-lg-6 text-center">
-              <img src="img/img3.jpg" alt="Waterfall Model" class="img-fluid rounded" style="width: 50%;">
-
-            </div>
+        <div class="row align-items-center">
+          <div class="col-lg-6 text-center order-lg-2">
+            <img src="img/img4.jpg" alt="Agile Framework" class="img-fluid rounded" style="width: 60%; height: auto; object-fit: cover;">
           </div>
-          <div class="row align-items-center">
-            <div class="col-lg-6 text-center order-lg-2">
-              <img src=img/img4.jpg alt="Agile Framework" class="img-fluid rounded" style="width: 50%; height: auto; object-fit: cover;">
-
-            </div>
-            <div class="col-lg-6 order-lg-1">
-              <h3>Agile<br><small class="text-muted">Approccio Iterativo</small></h3>
-              <p>Al contrario, l'approccio Agile si basa su interazioni brevi e incrementali, chiamate sprint. Questo modello è estremamente flessibile e adattabile, permettendo di incorporare cambiamenti durante il processo. L'Agile favorisce un coinvolgimento continuo degli stakeholder durante tutto il ciclo di vita del progetto, assicurando che le esigenze degli utenti siano costantemente soddisfatte. La gestione dei rischi è proattiva, identificando e affrontando precocemente le potenziali criticità.</p>
-            </div>
+          <div class="col-lg-6 order-lg-1">
+            <h3>Agile<br><small class="text-muted">Approccio Iterativo</small></h3>
+            <p>Al contrario, l'approccio Agile si basa su interazioni brevi e incrementali, chiamate sprint. Questo modello è estremamente flessibile e adattabile, permettendo di incorporare cambiamenti durante il processo. L'Agile favorisce un coinvolgimento continuo degli stakeholder durante tutto il ciclo di vita del progetto, assicurando che le esigenze degli utenti siano costantemente soddisfatte. La gestione dei rischi è proattiva, identificando e affrontando precocemente le potenziali criticità.</p>
           </div>
+        </div>
         <div class="row align-items-center" style="margin-top: 150px; gap: 60px;">
-            <div class="col-lg-5">
+          <div class="col-lg-5">
             <h3>Analisi comparativa</h3>
             <p>
-                La scelta tra Waterfall e Agile è cruciale per il
-                successo di un progetto. Se servono aderenza
-                a normative, pianificazione dettagliata e
-                obiettivi chiari sin dall’inizio, Waterfall è la
-                scelta più sicura. Questo approccio strutturato
-                riduce il rischio di deviazioni e garantisce il
-                rispetto dei requisiti, ma gestire cambiamenti
-                in corso può essere complesso e la mancanza
-                di feedback continui può far emergere
-                problemi troppo tardi.
-                Agile, invece, è perfetto per progetti che
-                richiedono flessibilità, adattamento costante e
-                collaborazione con il cliente.            </p>
-            </div>
-            <div class="col-lg-5">
+              La scelta tra Waterfall e Agile è cruciale per il
+              successo di un progetto. Se servono aderenza
+              a normative, pianificazione dettagliata e
+              obiettivi chiari sin dall’inizio, Waterfall è la
+              scelta più sicura. Questo approccio strutturato
+              riduce il rischio di deviazioni e garantisce il
+              rispetto dei requisiti, ma gestire cambiamenti
+              in corso può essere complesso e la mancanza
+              di feedback continui può far emergere
+              problemi troppo tardi.
+              Agile, invece, è perfetto per progetti che
+              richiedono flessibilità, adattamento costante e
+              collaborazione con il cliente.
+            </p>
+          </div>
+          <div class="col-lg-5">
             <p>
-                Agile, invece, è perfetto per progetti che
-                richiedono flessibilità, adattamento
-                costante e collaborazione con il cliente.
-                Grazie a iterazioni brevi, permette modifiche
-                rapide e migliora la qualità finale. Tuttavia,
-                se mal implementato o applicato a contesti
-                con requisiti rigidi, può generare inefficienze
-                e costi imprevisti. L’efficacia di entrambi i
-                metodi dipende dal contesto: la scelta deve
-                basarsi sulla natura del progetto, la
-                chiarezza dei requisiti e la capacità del team
-                di adattarsi ai cambiamenti, bilanciando
-                struttura e flessibilità.
-                            </p>
-            </div>
+              Agile, invece, è perfetto per progetti che
+              richiedono flessibilità, adattamento
+              costante e collaborazione con il cliente.
+              Grazie a iterazioni brevi, permette modifiche
+              rapide e migliora la qualità finale. Tuttavia,
+              se mal implementato o applicato a contesti
+              con requisiti rigidi, può generare inefficienze
+              e costi imprevisti. L’efficacia di entrambi i
+              metodi dipende dal contesto: la scelta deve
+              basarsi sulla natura del progetto, la
+              chiarezza dei requisiti e la capacità del team
+              di adattarsi ai cambiamenti, bilanciando
+              struttura e flessibilità.
+            </p>
+          </div>
         </div>
+      </div>
+    </section>
+  <!-- Case Study Section -->
+  <section id="case-study">
+    <div class="container">
+      <div class="text-center">
+        <h2 class="section-titlec">Casi Studio: Chaos Report 2020</h2>
+      </div>
+      <div class="statistics">
+        <div class="statistic">Successo Agile: 42%</div>
+        <div class="statistic">Successo Waterfall: 13%</div>
+        <div class="statistic">Efficienza: 3x</div>
+      </div>
+      <div class="two-column">
+        <div class="column">
+          <p>
+            Il Chaos Report 2020 del Standish Group fornisce dati concreti che dimostrano perché l'Agile è superiore al Waterfall. Secondo il report, i progetti Agile hanno un tasso di successo del 42%, rispetto a un misero 13% dei progetti Waterfall. Questo significa che i progetti Agile hanno una probabilità tre volte maggiore di avere successo. D'altra parte, i progetti Waterfall hanno un tasso di fallimento del 59%, mentre quello dei progetti Agile è solo dell'11%. In altre parole, i progetti Waterfall hanno una probabilità più del doppio di fallire rispetto a quelli Agile.
+          </p>
         </div>
-
-      </section>
+        <div class="column">
+          <p>
+            Anche se il 47% dei progetti Agile è classificato come "sfidante" (cioè affronta problemi di costi, tempi o scope), questi progetti riescono comunque a fornire valore. Al contrario, i progetti Waterfall che falliscono spesso non consegnano alcun risultato utile. I dati del Chaos Report 2020 evidenziano l'importanza di adottare metodologie flessibili come l'Agile.
+          </p>
+          <p>
+            Il Chaos Report 2020 conferma che l'Agile non solo migliora le probabilità di successo, ma riduce anche i rischi di fallimento, rendendolo la scelta preferita per progetti complessi e dinamici.
+          </p>
+        </div>
+      </div>
+    </div>
+</section> 
   <!-- Case Study Section -->
   <section id="case-study">
     <div class="container">
