--- a/index.html
+++ b/index.html
@@ -108,8 +108,9 @@
     }
 
     #case-study {
-        padding: 2rem 1rem; /* Adjust padding for smaller screens */
-        background-size: contain; /* Adjust background size for smaller screens */
+    padding: 2rem 1rem; /* Adjust padding for smaller screens */
+    background-size: cover; /* Ensure the background image covers the entire section */
+    background-position: center; /* Center the background image */
     }
 
     .section-titlec {
@@ -123,7 +124,9 @@
     }
 
     #case-study {
-        padding: 1.5rem 1rem; /* Further adjust padding for extra small screens */
+    padding: 1.5rem 1rem; /* Further adjust padding for extra small screens */
+    background-size: cover; /* Ensure the background image covers the entire section */
+    background-position: center; /* Center the background image */
     }
 
     .section-titlec {
