--- a/index.html
+++ b/index.html
@@ -838,7 +838,7 @@
     </div>
 </section> 
   <!-- Case Study Section -->
-  <section id="case-study">
+ /* <section id="case-study">
     <div class="container">
       <div class="text-center">
         <h2 class="section-titlec">Casi Studio: Chaos Report 2020</h2>
@@ -864,7 +864,7 @@
         </div>
       </div>
     </div>
-</section>
+</section> *\
 <!-- Why Agile Section -->
 <section class="article-section" data-aos="fade-up" style="margin-top: 50px; margin-bottom: 50px;">
     <h2 class="section-titlef text-center mb-5"><b>Perché Preferire Agile?</b></h2>
