--- a/index.html
+++ b/index.html
@@ -840,7 +840,7 @@ il suo sviluppo.</li>
   <section>
  <h1 style="font-size: 44px; font-family: 'Archivo Black', sans-serif; margin-top: 63px; margin-bottom: 50px; margin-left: 87px;">Differenze tra Agile e Waterfall</h1>
 <div class="text-center">
-  <img src="img/ima.jpg" alt="Example Image" class="img-fluid" style="margin-bottom: 107px;">
+  <img src=img/ima.jpg alt="Example Image" class="img-fluid" style="margin-bottom: 107px;">
 </div>
 <section>
     <section id="waterfall-vs-agile" class="py-5 bg-light">
@@ -853,16 +853,16 @@ il suo sviluppo.</li>
             <h3>Waterfall<br><small class="text-muted">Approccio Sequenziale</small></h3>
             <p>La metodologia Waterfall segue un approccio lineare e sequenziale. Ogni fase del progetto deve essere completata prima di passare alla successiva. Questo modello è ideale per progetti con obiettivi ben definiti e poco soggetti a cambiamenti. Tuttavia, la sua rigidità rende difficile l'incorporazione di modifiche una volta che il progetto è in corso. Il coinvolgimento degli stakeholder è limitato principalmente alla fase iniziale e finale del progetto.</p>
             <div class="d-block d-lg-none text-center mt-3">
-              <img src="img/img3.jpg" alt="Waterfall Model" class="img-fluid rounded" style="width: 60%;">
+              <img src=img/img3.jpg alt="Waterfall Model" class="img-fluid rounded" style="width: 60%;">
             </div>
           </div>
           <div class="col-lg-6 text-center d-none d-lg-block">
-            <img src="img/img3.jpg" alt="Waterfall Model" class="img-fluid rounded" style="width: 60%;">
+            <img src=img/img3.jpg alt="Waterfall Model" class="img-fluid rounded" style="width: 60%;">
           </div>
         </div>
         <div class="row align-items-center">
           <div class="col-lg-6 text-center order-lg-2">
-            <img src="img/img4.jpg" alt="Agile Framework" class="img-fluid rounded" style="width: 60%; height: auto; object-fit: cover;">
+            <img src=img/img4.jpg alt="Agile Framework" class="img-fluid rounded" style="width: 60%; height: auto; object-fit: cover;">
           </div>
           <div class="col-lg-6 order-lg-1">
             <h3>Agile<br><small class="text-muted">Approccio Iterativo</small></h3>
