--- a/index.html
+++ b/index.html
@@ -1033,44 +1033,44 @@ Mentre Agile permette flessibilità e adattamenti rapidi, Waterfall è più indi
     </div>
 </section> 
 <!-- Why Agile Section -->
-<section class="article-section" data-aos="fade-up" style="margin-top: 50px; margin-bottom: 50px;">
-    <h2 class="section-titlef text-center mb-5"><b>Perché Preferire Agile?</b></h2>
+<section class="article-section" data-aos="fade-up" style="margin-top: 30px; margin-bottom: 50px;">
+    <h2 class="section-titlef mb-5" style="text-align: left; margin-bottom: 2000px; margin-left: 100px;"><b>Il valore strategico di Agile</b></h2>
     <div class="container">
         <div class="row text-center g-4">
             <div class="col-md-3">
-                <div class="featured-card p-4 rounded shadow-sm" style="background-color: #052658; color: white; height: 350px;">
-                    <div class="mb-3">
-                        <i class="fas fa-retweet fa-2x"></i>
-                    </div>
-                    <h4 class="mb-3">Adattabilità</h4>
-                    <p>In un mondo in cui i requisiti dei progetti cambiano frequentemente, l’Agile permette di rispondere rapidamente a queste modifiche, riducendo il rischio di consegnare un prodotto obsoleto.</p>
+                <div class="featured-card p-4 rounded shadow-sm" style="background-color: #052658; color: white; height: 350px; background-image: url(img/c4.jpg); background-size: cover; background-position: center;">
+                  <div class="mb-3">
+                    <i class="fas fa-users fa-2x"></i>
+                  </div>
+                  <h4 class="mb-3">Adattabilità</h4>
+                    <p style="margin-top: 40px;">In un mondo in cui i requisiti dei progetti cambiano frequentemente, Agile permette di rispondere rapidamente a queste modifiche, riducendo il rischio di consegnare un prodotto obsoleto.</p>
                 </div>
             </div>
             <div class="col-md-3">
-                <div class="featured-card p-4 rounded shadow-sm" style="background-color: #052658; color: white; height: 350px;">
+                <div class="featured-card p-4 rounded shadow-sm" style="background-color: #052658; color: white; height: 350px;background-image: url(img/c3.jpg); background-size: cover; background-position: center;">
                     <div class="mb-3">
                         <i class="fas fa-users fa-2x"></i>
                     </div>
                     <h4 class="mb-3">Collaborazione</h4>
-                    <p>Riunioni quotidiane e revisioni regolari garantiscono una comunicazione costante tra il team e gli stakeholder.</p>
+                    <p style="margin-top: 40px;">Agile promuove la collaborazione continua tra il team di sviluppo e gli stakeholder, assicurando che le esigenze del cliente siano sempre al centro del processo.</p>
                 </div>
             </div>
             <div class="col-md-3">
-                <div class="featured-card p-4 rounded shadow-sm" style="background-color: #052658; color: white; height: 350px;">
+                <div class="featured-card p-4 rounded shadow-sm" style="background-color: #052658; color: white; height: 350px;background-image: url(img/c2.jpg); background-size: cover; background-position: center;">
                     <div class="mb-3">
                         <i class="fas fa-bolt fa-2x"></i>
                     </div>
                     <h4 class="mb-3">Consegna Rapida</h4>
-                    <p>Consegne frequenti permettono di raccogliere feedback tempestivo e apportare miglioramenti continui, aumentando la soddisfazione degli stakeholder.</p>
+                    <p style="margin-top: 40px;">Le consegne frequenti permettono di raccogliere feedback tempestivo e apportare miglioramenti continui, aumentando la soddisfazione degli stakeholder.</p>
                 </div>
             </div>
             <div class="col-md-3">
-                <div class="featured-card p-4 rounded shadow-sm" style="background-color: #052658; color: white; height: 350px;">
+                <div class="featured-card p-4 rounded shadow-sm" style="background-color: #052658; color: white; height: 350px;background-image: url(img/c1.jpg); background-size: cover; background-position: center;">
                     <div class="mb-3">
                         <i class="fas fa-shield-alt fa-2x"></i>
                     </div>
                     <h4 class="mb-3">Gestione Rischi</h4>
-                    <p>Identificazione e risoluzione tempestiva dei problemi grazie alla suddivisione in sprint.</p>
+                    <p style="margin-top: 40px;">Identificazione e risoluzione tempestiva dei problemi grazie alla suddivisione in sprint.</p>
                 </div>
             </div>
         </div>
