--- a/index.html
+++ b/index.html
@@ -22,18 +22,41 @@
     
 } */
 .article-section {
-    padding: 4rem 0; /* Retain padding for internal spacing */
-    background-color: white; /* Deep navy blue */
-    margin-top: 0; /* Remove top margin */
-    margin-bottom: 0; /* Remove bottom margin */
+  padding: 4rem 0; /* Retain padding for internal spacing */
+  background-color: white; /* Deep navy blue */
+  margin-top: 0; /* Remove top margin */
+  margin-bottom: 0; /* Remove bottom margin */
 }
 
 .main-footer {
-    background: var(--primary);
-    color: #FFFFFF;
-    background-color: #052658;
-    padding: 3rem 0;
-    text-align: center;
+  background: var(--primary);
+  color: #FFFFFF;
+  background-color: #052658;
+  padding: 3rem 0;
+  text-align: center;
+}
+
+/* Responsive Design */
+@media (max-width: 768px) {
+  .article-section {
+    padding: 2rem 1rem; /* Adjust padding for smaller screens */
+  }
+
+  .main-footer {
+    padding: 2rem 1rem; /* Adjust footer padding for smaller screens */
+    font-size: 0.9rem; /* Reduce font size for better readability */
+  }
+}
+
+@media (max-width: 576px) {
+  .article-section {
+    padding: 1.5rem 1rem; /* Further adjust padding for extra small screens */
+  }
+
+  .main-footer {
+    padding: 1.5rem 1rem; /* Further adjust footer padding for extra small screens */
+    font-size: 0.8rem; /* Further reduce font size */
+  }
 }
 
 /* Responsive Design */
@@ -300,72 +323,82 @@
     .key-point-content li strong {
       font-weight: 700;
     }
-    @media (max-width: 768px) {
-      .key-point {
-        flex-direction: row; /* Ensure the number and content are side by side */
-        align-items: flex-start; /* Align items at the top */
-        text-align: left; /* Align text to the left */
-      }
-      .key-point-number {
-        width: 50px; /* Smaller circle */
-        height: 50px; /* Smaller circle */
-        font-size: 30px; /* Adjust font size */
-        margin-right: 20px; /* Space between number and content */
-        flex-shrink: 0; /* Prevent shrinking of the number */
-      }
-      .key-point:not(:last-child)::after {
-        width: 2px; /* Line thickness */
-        height: 200%; /* Line height */
-        left: calc(25px - 1px); /* Center the line with the number */
-        top: 100%; /* Position the line below the number */
-        transform: translateY(-50%); /* Adjust alignment */
-      }
-      .key-point-content {
-        margin-left: 0; /* Reset margin */
-        padding-top: 0; /* Remove top padding */
-      }
-      .key-point-content h3 {
-        font-size: 18px; /* Adjust font size */
-        margin-bottom: 15px; /* Space below heading */
-      }
-      .key-point-content li {
-        font-size: 16px; /* Adjust font size */
-      }
-    }
-
-    @media (max-width: 992px) {
-      .key-point {
-        flex-direction: row; /* Ensure the number and content are side by side */
-        align-items: flex-start; /* Align items at the top */
-        text-align: left; /* Align text to the left */
-      }
-      .key-point-number {
-        width: 60px; /* Adjust circle size */
-        height: 60px; /* Adjust circle size */
-        font-size: 35px; /* Adjust font size */
-        margin-right: 30px; /* Space between number and content */
-        flex-shrink: 0; /* Prevent shrinking of the number */
-      }
-      .key-point:not(:last-child)::after {
-        width: 2px; /* Line thickness */
-        height: 200%; /* Line height */
-        left: calc(30px - 1px); /* Center the line with the number */
-        top: 100%; /* Position the line below the number */
-        transform: translateY(-50%); /* Adjust alignment */
-      }
-      .key-point-content {
-        margin-left: 0; /* Reset margin */
-        padding-top: 0; /* Remove top padding */
-      }
-      .key-point-content h3 {
-        font-size: 20px; /* Adjust font size */
-        margin-bottom: 20px; /* Space below heading */
-      }
-      .key-point-content li {
-        font-size: 18px; /* Adjust font size */
-      }
-    }
-
+    <style>
+/* DESKTOP VERSION (new design) */
+@media (min-width: 769px) {
+  .key-points-section {
+    padding: 60px 80px !important;
+  }
+  .section-title {
+    font-family: 'Archivo Black', sans-serif !important;
+    font-size: 44px !important;
+    margin-top: 153px !important;
+    margin-bottom: 97px !important;
+  }
+  .key-point {
+    margin-top: 97px !important;
+    margin-bottom: 67px !important;
+    min-height: 150px !important;
+  }
+  .key-point-number {
+    width: 80px !important;
+    height: 80px !important;
+    border: 2px solid #FFFFFF !important;
+    border-radius: 50% !important;
+    margin-right: 70px !important;
+    margin-top: 140px !important;
+  }
+  .key-point:not(:last-child)::after {
+    content: '' !important;
+    position: absolute !important;
+    top: 122.5% !important;
+    left: calc(40px - 1px) !important;
+    width: 2px !important;
+    height: 130% !important;
+    background-color: #ffffff !important;
+  }
+  .key-point-content {
+    padding-top: 67px !important;
+    margin-left: -20px !important;
+  }
+  .key-point-content h3,
+  .key-point-content ul {
+    margin-left: 114px !important;
+  }
+  .key-point-content li::before {
+    content: '' !important;
+  }
+}
+    /* MOBILE VERSION (old design) */
+@media (max-width: 768px) {
+  /* Your original mobile styles from old code */
+  .key-points-section {
+    padding: 30px 30px !important;
+  }
+  .key-point {
+    display: flex !important;
+    align-items: flex-start !important;
+    margin-bottom: 20px !important;
+  }
+  .key-point-number {
+    font-size: 30px !important;
+    margin-right: 30px !important;
+    width: auto !important;
+    border: none !important;
+    border-radius: 0 !important;
+    margin-top: 0 !important;
+  }
+  .key-point-content h3 {
+    font-size: 14px !important;
+  }
+  .key-point-content li {
+    font-size: 12px !important;
+  }
+  /* Remove desktop-specific elements */
+  .key-point:not(:last-child)::after {
+    display: none !important;
+  }
+}
 @media (max-width: 480px) {
   .section-title {
     font-size: 16px;
@@ -528,140 +561,90 @@
       letter-spacing: -0.015em;
     }
     .hero-section {
-      position: relative;
-      min-height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: flex-start;
-      padding-left: 15%;
-      color: white;
-      overflow: hidden;
-      background-color: #052658;
-      background-image: url(img/immagine\ 03.jpg);
-      background-size: cover;
-      background-position: top right;
-      padding: 0 2rem;
-      line-height: 1.4; /* Set line height to 1.4 */
-    }
-    .hero-section .container {
-      max-width: calc(100% - 550px); /* 87px from left + 463px from right */
-      margin-left: 87px;
-      margin-right: 463px;
-      position: relative;
-      margin-top: 153px; /* Add 153px space above */
-    }
-    .hero-section h1 {
-      font-size: 40px; /* Equivalent to 73px */
-      font-weight: 700;
-      font-family: 'Archivo Black', sans-serif;
-      margin-bottom: 1rem;
-      line-height: 1.4; /* Set line height to 1.4 */
-    }
-    .hero-section h2 {
-      font-size: 27px; /* 36pt converted to px */
-      font-family: 'Archivo Black', sans-serif;
-      line-height: 1.4; /* Set line height to 1.4 */
-    }
-    .hero-section p {
-      font-family: 'Nunito', sans-serif;
-      font-weight: bold;
-      font-size: 20px; /* Equivalent to 14pt */
-      line-height: 1.4; /* Set line height to 1.4 */
-    }
+  position: relative;
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center; /* Center content on mobile */
+  color: white;
+  overflow: hidden;
+  background-color: #052658;
+  background-image: url(img/immagine\ 03.jpg);
+  background-size: cover;
+  background-position: center right; /* Better for mobile */
+  padding: 2rem 1.5rem;
+  line-height: 1.4;
+}
+.hero-section .container {
+  width: 100%;
+  max-width: 1200px; /* Maximum content width */
+  position: relative;
+  margin: 2rem auto; /* Vertical spacing */
+  z-index: 2;
+}
+.hero-section::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(90deg, rgba(5,38,88,0.9) 30%, transparent 70%);
+  z-index: 1;
+}
     
-/* Media Queries */
-@media (max-width: 1200px) {
+.hero-section h1 {
+  font-size: clamp(2rem, 5vw, 3.5rem); /* Fluid between 32px-73px */
+  font-weight: 700;
+  font-family: 'Archivo Black', sans-serif;
+  margin-bottom: 1rem;
+  line-height: 1.2;
+}
+
+.hero-section h2 {
+  font-size: clamp(1.5rem, 3vw, 2.25rem); /* Fluid between 24px-36px */
+  font-family: 'Archivo Black', sans-serif;
+  line-height: 1.4;
+}
+
+.hero-section p {
+  font-family: 'Nunito', sans-serif;
+  font-weight: bold;
+  font-size: clamp(1rem, 1.5vw, 1.25rem); /* Fluid between 16px-20px */
+  line-height: 1.4;
+  max-width: 600px;
+}
+
+/* Tablet and desktop adjustments */
+@media (min-width: 768px) {
+  .hero-section {
+    justify-content: flex-start;
+    padding-left: 5%;
+    background-position: top right;
+  }
+
   .hero-section .container {
-    max-width: 90%; /* Adjusted to ensure content stays within view */
-    margin-top: 8vh;
-    padding: 1.5rem;
-  }
-  
-  .hero-section h1 {
-    font-size: 3.5rem;
-  }
-  
-  .hero-section h2 {
-    font-size: 2rem;
+    margin-top: 6rem; /* Reduced from fixed 153px */
+    margin-left: 5%;
+    margin-right: auto;
   }
 }
 
-@media (max-width: 992px) {
-  .hero-section {
-    background-position: center right;
-    padding: 1.5rem;
-  }
-  
+/* Large desktop adjustments */
+@media (min-width: 1200px) {
   .hero-section .container {
-    max-width: 90%; /* Adjusted to ensure content stays within view */
-  }
-  
-  .hero-section h1 {
-    font-size: 3rem;
-  }
-  
-  .hero-section h2 {
-    font-size: 1.75rem;
-  }
-  
-  .hero-section p {
-    font-size: 1rem;
+    margin-left: 87px;
+    margin-right: 463px;
   }
 }
 
-@media (max-width: 768px) {
+/* Mobile landscape orientation */
+@media (max-height: 500px) and (orientation: landscape) {
   .hero-section {
-    justify-content: center;
-    text-align: center;
-    background-position: center;
-  }
-  
-  .hero-section .container {
-    margin-top: 5vh;
-    padding: 1rem;
-    max-width: 90%; /* Adjusted to ensure content stays within view */
-  }
-  
-  .hero-section h1 {
-    font-size: 2.5rem;
-  }
-  
-  .hero-section h2 {
-    font-size: 1.5rem;
-  }
-  
-  .hero-section p {
-    margin: 0 auto;
+    min-height: 150vh;
   }
 }
 
-@media (max-width: 480px) {
-  .hero-section {
-    padding: 1.5rem;
-    text-align: center;
-  }
-  
-  .hero-section .container {
-    max-width: 90%; /* Adjusted to ensure content stays within view */
-  }
-  
-  .hero-section h1 {
-    font-size: 1.8rem;
-    line-height: 1.2;
-  }
-  
-  .hero-section h2 {
-    font-size: 1.2rem;
-    line-height: 1.2;
-  }
-  
-  .hero-section p {
-    font-size: 1rem;
-    line-height: 1.5;
-    margin: 0 auto;
-    max-width: 90%; /* Adjusted to ensure content stays within view */
-  }
-}
     .section-title {
       font-size: 2.5rem;
       font-weight: 700;
