--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
     .key-point-content li strong {
       font-weight: 700;
     }
-  
+  <style>
 /* DESKTOP VERSION (new design) */
 @media (min-width: 769px) {
   .key-points-section {
