--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
       padding: 60px 80px;
       
       position: relative;
-      background-color: #002A59; /* Deep navy blue */
+      background-color: #002859; /* Deep navy blue */
       color: #FFFFFF;
       
     }
