--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
     }
     .sticky-header nav {
       display: flex;
-      gap: 1rem;
+      gap: 70px;
     }
     .sticky-header nav a {
       font-family: 'Poppins', sans-serif;
@@ -822,13 +822,13 @@
   <!-- Sticky Header -->
   <header class="sticky-header">
     <div class="container">
-      <div class="logo">DesignHub</div>
+      <div class="logo" style="margin left: 110px " >DesignHub</div>
       <nav>
         <a href="#hero">Home</a>
-        <a href="#pillars">Location</a>
-        <a href="#waterfall-vs-agile">Comparison</a>
-        <a href="#case-study">Case of Study</a>
-        <a href="#footer">Contacts</a>
+        <a href="#">Servizi</a>
+        <a href="#footer">Contatti</a>
+        <a href="">IT</a>
+       
       </nav>
       <button class="menu-toggle">☰</button>
     </div>
