--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
       z-index: 1000;
       backdrop-filter: blur(10px);
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-      background-color: rgba(5, 38, 88, 0.8); /* Deep navy blue with 80% opacity */
+      background-color: rgb(0,43,92); /* Deep navy blue with 80% opacity */
       height: 33px; /* Set header height to 33px */
       display: flex; /* Ensure content aligns properly */
       align-items: center; /* Vertically center content */
@@ -822,7 +822,7 @@
   <!-- Sticky Header -->
   <header class="sticky-header">
     <div class="container">
-      <div class="logo" style="margin left: 110px " >DesignHub</div>
+      <div class="logo" style="margin left: 110px; " >DesignHub</div>
       <nav>
         <a href="#hero">Home</a>
         <a href="#">Servizi</a>
