--- a/index.html
+++ b/index.html
@@ -826,7 +826,7 @@
       <nav>
         <a href="#hero">Home</a>
         <a href="#">Servizi</a>
-        <a href="#footer">Contatti</a>
+        <a href="#main-footer">Contatti</a>
         <a href="">IT</a>
        
       </nav>
