--- a/index.html
+++ b/index.html
@@ -825,7 +825,7 @@
       <div class="logo" style="margin left: 110px; " >DesignHub</div>
       <nav>
         <a href="#hero">Home</a>
-        <a href="#">Servizi</a>
+        <a href="">Servizi</a>
         <a href="#main-footer">Contatti</a>
         <a href="">IT</a>
        
