--- a/index.html
+++ b/index.html
@@ -1056,7 +1056,7 @@ D’altra parte, i progetti Waterfall hanno un tasso di fallimento del 59%, ment
 
 </main>
 
-<footer class="main-footer">
+<footer id="main-footer" class="main-footer">
 <div class="container text-center">
     <div class="footer-logo">DesignHUB</div>
     <div class="d-flex justify-content-center gap-4 mb-3">
