--- a/index.html
+++ b/index.html
@@ -822,7 +822,7 @@
   <!-- Sticky Header -->
   <header class="sticky-header">
     <div class="container">
-      <div class="logo" style="margin-left: 110px; " >DesignHub</div>
+      <div class="logo" style="margin-left: 9%; " >DesignHub</div>
       <nav>
         <a href="#hero">Home</a>
         <a href="">Servizi</a>
